# Turtlesim-Gesture-Control

./: README.md
gesture_detection/: CMakeLists.txt  package.xml
gesture_detection/include/gesture_detection/: CameraControl.hpp  ConvexityDefectsDetection.hpp  GestureDetection.hpp  GestureDetectionStrategy.hpp  HandDetector.hpp
gesture_detection/scripts/: Camera_Filter.py  HSV_Camera_Filter.py
gesture_detection/src/: CameraControl.cpp  ConvexityDefectsDetection.cpp  GestureDetection.cpp  HandDetector.cpp  gesture_detection.cpp  main.cpp
gesture_to_command/: CMakeLists.txt  package.xml
gesture_to_command/include/gesture_to_command/: GestureToCommand.hpp
gesture_to_command/src/: GestureToCommand.cpp  main.cpp
